exports[`prefer-else-if > invalid(1): if (foo === 1) {}\nif (foo === 2) {} 1`] = `

  1 | if (foo === 1) {}
  2 | if (foo === 2) {}

`;

exports[`prefer-else-if > invalid(1): if (foo === 1) {}\nif (foo === 2) {} 2`] = `

Message:
  1 | if (foo === 1) {}
> 2 | if (foo === 2) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (foo === 1) {}
  2 | else if (foo === 2) {}

`;

exports[`prefer-else-if > invalid(10): if (foo.bar === 1) {}\nif (foo['bar'] === 2) {} 1`] = `

  1 | if (foo.bar === 1) {}
  2 | if (foo['bar'] === 2) {}

`;

exports[`prefer-else-if > invalid(10): if (foo.bar === 1) {}\nif (foo['bar'] === 2) {} 2`] = `

Message:
  1 | if (foo.bar === 1) {}
> 2 | if (foo['bar'] === 2) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | if (foo.bar === 1) {}
  2 | else if (foo['bar'] === 2) {}

`;

exports[`prefer-else-if > invalid(11): if (foo['bar'] === 1) {}\nif (foo['bar'] === 2) {} 1`] = `

  1 | if (foo['bar'] === 1) {}
  2 | if (foo['bar'] === 2) {}

`;

exports[`prefer-else-if > invalid(11): if (foo['bar'] === 1) {}\nif (foo['bar'] === 2) {} 2`] = `

Message:
  1 | if (foo['bar'] === 1) {}
> 2 | if (foo['bar'] === 2) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | if (foo['bar'] === 1) {}
  2 | else if (foo['bar'] === 2) {}

`;

exports[`prefer-else-if > invalid(12): if (foo === 1 || foo === 2) {}\nif (foo === 3 || foo === 4) {} 1`] = `

  1 | if (foo === 1 || foo === 2) {}
  2 | if (foo === 3 || foo === 4) {}

`;

exports[`prefer-else-if > invalid(12): if (foo === 1 || foo === 2) {}\nif (foo === 3 || foo === 4) {} 2`] = `

Message:
  1 | if (foo === 1 || foo === 2) {}
> 2 | if (foo === 3 || foo === 4) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (foo === 1 || foo === 2) {}
  2 | else if (foo === 3 || foo === 4) {}

`;

exports[`prefer-else-if > invalid(13): class Foo {\n\t#state;\n\n\tmethod() {\n\t\tif (this.#state === 1) {}\n\t\tif (this.#state === 2) {}\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	#state;
  3 |
  4 | 	method() {
  5 | 		if (this.#state === 1) {}
  6 | 		if (this.#state === 2) {}
  7 | 	}
  8 | }

`;

exports[`prefer-else-if > invalid(13): class Foo {\n\t#state;\n\n\tmethod() {\n\t\tif (this.#state === 1) {}\n\t\tif (this.#state === 2) {}\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	#state;
  3 |
  4 | 	method() {
  5 | 		if (this.#state === 1) {}
> 6 | 		if (this.#state === 2) {}
    | 		^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  7 | 	}
  8 | }

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | class Foo {
  2 | 	#state;
  3 |
  4 | 	method() {
  5 | 		if (this.#state === 1) {}
  6 | 		else if (this.#state === 2) {}
  7 | 	}
  8 | }

`;

exports[`prefer-else-if > invalid(14): if ((foo as string) === 'one') {}\nif (foo === 'two') {} 1`] = `

  1 | if ((foo as string) === 'one') {}
  2 | if (foo === 'two') {}

`;

exports[`prefer-else-if > invalid(14): if ((foo as string) === 'one') {}\nif (foo === 'two') {} 2`] = `

Message:
  1 | if ((foo as string) === 'one') {}
> 2 | if (foo === 'two') {}
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if ((foo as string) === 'one') {}
  2 | else if (foo === 'two') {}

`;

exports[`prefer-else-if > invalid(15): if (foo! === 'one') {}\nif (foo === 'two') {} 1`] = `

  1 | if (foo! === 'one') {}
  2 | if (foo === 'two') {}

`;

exports[`prefer-else-if > invalid(15): if (foo! === 'one') {}\nif (foo === 'two') {} 2`] = `

Message:
  1 | if (foo! === 'one') {}
> 2 | if (foo === 'two') {}
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (foo! === 'one') {}
  2 | else if (foo === 'two') {}

`;

exports[`prefer-else-if > invalid(16): if ((foo satisfies string) === 'one') {}\nif (foo === 'two') {} 1`] = `

  1 | if ((foo satisfies string) === 'one') {}
  2 | if (foo === 'two') {}

`;

exports[`prefer-else-if > invalid(16): if ((foo satisfies string) === 'one') {}\nif (foo === 'two') {} 2`] = `

Message:
  1 | if ((foo satisfies string) === 'one') {}
> 2 | if (foo === 'two') {}
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if ((foo satisfies string) === 'one') {}
  2 | else if (foo === 'two') {}

`;

exports[`prefer-else-if > invalid(17): function unicorn(foo: boolean) {\n\tif (foo) {}\n\tif (foo === false) {}\n} 1`] = `

  1 | function unicorn(foo: boolean) {
  2 | 	if (foo) {}
  3 | 	if (foo === false) {}
  4 | }

`;

exports[`prefer-else-if > invalid(17): function unicorn(foo: boolean) {\n\tif (foo) {}\n\tif (foo === false) {}\n} 2`] = `

Message:
  1 | function unicorn(foo: boolean) {
  2 | 	if (foo) {}
> 3 | 	if (foo === false) {}
    | 	^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  4 | }

Output:
  1 | function unicorn(foo: boolean) {
  2 | 	if (foo) {}
  3 | 	else if (foo === false) {}
  4 | }

`;

exports[`prefer-else-if > invalid(18): const foo = true;\n\nif (foo) {}\nif (foo === false) {} 1`] = `

  1 | const foo = true;
  2 |
  3 | if (foo) {}
  4 | if (foo === false) {}

`;

exports[`prefer-else-if > invalid(18): const foo = true;\n\nif (foo) {}\nif (foo === false) {} 2`] = `

Message:
  1 | const foo = true;
  2 |
  3 | if (foo) {}
> 4 | if (foo === false) {}
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | const foo = true;
  2 |
  3 | if (foo) {}
  4 | else if (foo === false) {}

`;

exports[`prefer-else-if > invalid(19): declare const options: {enabled: boolean};\n\nif (options.enabled) {}\nif (options.enabled === false) {} 1`] = `

Filename: file.ts

  1 | declare const options: {enabled: boolean};
  2 |
  3 | if (options.enabled) {}
  4 | if (options.enabled === false) {}

`;

exports[`prefer-else-if > invalid(19): declare const options: {enabled: boolean};\n\nif (options.enabled) {}\nif (options.enabled === false) {} 2`] = `

Message:
  1 | declare const options: {enabled: boolean};
  2 |
  3 | if (options.enabled) {}
> 4 | if (options.enabled === false) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | declare const options: {enabled: boolean};
  2 |
  3 | if (options.enabled) {}
  4 | else if (options.enabled === false) {}

`;

exports[`prefer-else-if > invalid(2): if (foo === null) {}\nif (foo === 1) {} 1`] = `

  1 | if (foo === null) {}
  2 | if (foo === 1) {}

`;

exports[`prefer-else-if > invalid(2): if (foo === null) {}\nif (foo === 1) {} 2`] = `

Message:
  1 | if (foo === null) {}
> 2 | if (foo === 1) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (foo === null) {}
  2 | else if (foo === 1) {}

`;

exports[`prefer-else-if > invalid(20): function unicorn(foo: boolean) {\n\tif (!foo) {}\n\tif (foo === true) {}\n} 1`] = `

  1 | function unicorn(foo: boolean) {
  2 | 	if (!foo) {}
  3 | 	if (foo === true) {}
  4 | }

`;

exports[`prefer-else-if > invalid(20): function unicorn(foo: boolean) {\n\tif (!foo) {}\n\tif (foo === true) {}\n} 2`] = `

Message:
  1 | function unicorn(foo: boolean) {
  2 | 	if (!foo) {}
> 3 | 	if (foo === true) {}
    | 	^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  4 | }

Output:
  1 | function unicorn(foo: boolean) {
  2 | 	if (!foo) {}
  3 | 	else if (foo === true) {}
  4 | }

`;

exports[`prefer-else-if > invalid(21): function unicorn(foo: boolean) {\n\tif (Boolean(foo)) {}\n\tif (foo === false) {}\n} 1`] = `

  1 | function unicorn(foo: boolean) {
  2 | 	if (Boolean(foo)) {}
  3 | 	if (foo === false) {}
  4 | }

`;

exports[`prefer-else-if > invalid(21): function unicorn(foo: boolean) {\n\tif (Boolean(foo)) {}\n\tif (foo === false) {}\n} 2`] = `

Message:
  1 | function unicorn(foo: boolean) {
  2 | 	if (Boolean(foo)) {}
> 3 | 	if (foo === false) {}
    | 	^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  4 | }

Output:
  1 | function unicorn(foo: boolean) {
  2 | 	if (Boolean(foo)) {}
  3 | 	else if (foo === false) {}
  4 | }

`;

exports[`prefer-else-if > invalid(22): function unicorn(foo: boolean) {\n\tif (foo === false) {}\n\tif (Boolean(foo)) {}\n} 1`] = `

  1 | function unicorn(foo: boolean) {
  2 | 	if (foo === false) {}
  3 | 	if (Boolean(foo)) {}
  4 | }

`;

exports[`prefer-else-if > invalid(22): function unicorn(foo: boolean) {\n\tif (foo === false) {}\n\tif (Boolean(foo)) {}\n} 2`] = `

Message:
  1 | function unicorn(foo: boolean) {
  2 | 	if (foo === false) {}
> 3 | 	if (Boolean(foo)) {}
    | 	^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  4 | }

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | function unicorn(foo: boolean) {
  2 | 	if (foo === false) {}
  3 | 	else if (Boolean(foo)) {}
  4 | }

`;

exports[`prefer-else-if > invalid(23): switch (foo) {\n\tcase 'bar':\n\t\tif (foo === 1) {}\n\t\tif (foo === 2) {}\n} 1`] = `

  1 | switch (foo) {
  2 | 	case 'bar':
  3 | 		if (foo === 1) {}
  4 | 		if (foo === 2) {}
  5 | }

`;

exports[`prefer-else-if > invalid(23): switch (foo) {\n\tcase 'bar':\n\t\tif (foo === 1) {}\n\t\tif (foo === 2) {}\n} 2`] = `

Message:
  1 | switch (foo) {
  2 | 	case 'bar':
  3 | 		if (foo === 1) {}
> 4 | 		if (foo === 2) {}
    | 		^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  5 | }

Output:
  1 | switch (foo) {
  2 | 	case 'bar':
  3 | 		if (foo === 1) {}
  4 | 		else if (foo === 2) {}
  5 | }

`;

exports[`prefer-else-if > invalid(24): class Foo {\n\tstatic {\n\t\tif (foo === 1) {}\n\t\tif (foo === 2) {}\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	static {
  3 | 		if (foo === 1) {}
  4 | 		if (foo === 2) {}
  5 | 	}
  6 | }

`;

exports[`prefer-else-if > invalid(24): class Foo {\n\tstatic {\n\t\tif (foo === 1) {}\n\t\tif (foo === 2) {}\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	static {
  3 | 		if (foo === 1) {}
> 4 | 		if (foo === 2) {}
    | 		^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  5 | 	}
  6 | }

Output:
  1 | class Foo {
  2 | 	static {
  3 | 		if (foo === 1) {}
  4 | 		else if (foo === 2) {}
  5 | 	}
  6 | }

`;

exports[`prefer-else-if > invalid(25): if (foo === 1) {}\nelse if (foo === 2) {}\n\nif (foo === 3) {}\nelse if (foo === 4) {}\n\nif (foo === 5) {} 1`] = `

  1 | if (foo === 1) {}
  2 | else if (foo === 2) {}
  3 |
  4 | if (foo === 3) {}
  5 | else if (foo === 4) {}
  6 |
  7 | if (foo === 5) {}

`;

exports[`prefer-else-if > invalid(25): if (foo === 1) {}\nelse if (foo === 2) {}\n\nif (foo === 3) {}\nelse if (foo === 4) {}\n\nif (foo === 5) {} 2`] = `

Message:
  1 | if (foo === 1) {}
  2 | else if (foo === 2) {}
  3 |
> 4 | if (foo === 3) {}
    | ^^^^^^^^^^^^^^^^^
> 5 | else if (foo === 4) {}
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  6 |
  7 | if (foo === 5) {}

Output:
  1 | if (foo === 1) {}
  2 | else if (foo === 2) {}
  3 |
  4 | else if (foo === 3) {}
  5 | else if (foo === 4) {}
  6 |
  7 | if (foo === 5) {}

`;

exports[`prefer-else-if > invalid(25): if (foo === 1) {}\nelse if (foo === 2) {}\n\nif (foo === 3) {}\nelse if (foo === 4) {}\n\nif (foo === 5) {} 3`] = `

Message:
  1 | if (foo === 1) {}
  2 | else if (foo === 2) {}
  3 |
  4 | if (foo === 3) {}
  5 | else if (foo === 4) {}
  6 |
> 7 | if (foo === 5) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (foo === 1) {}
  2 | else if (foo === 2) {}
  3 |
  4 | if (foo === 3) {}
  5 | else if (foo === 4) {}
  6 |
  7 | else if (foo === 5) {}

`;

exports[`prefer-else-if > invalid(26): if (foo === 1) {}\nelse if (foo === 2) {\n\tbar();\n}\n\nif (foo === 3) {} 1`] = `

  1 | if (foo === 1) {}
  2 | else if (foo === 2) {
  3 | 	bar();
  4 | }
  5 |
  6 | if (foo === 3) {}

`;

exports[`prefer-else-if > invalid(26): if (foo === 1) {}\nelse if (foo === 2) {\n\tbar();\n}\n\nif (foo === 3) {} 2`] = `

Message:
  1 | if (foo === 1) {}
  2 | else if (foo === 2) {
  3 | 	bar();
  4 | }
  5 |
> 6 | if (foo === 3) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | if (foo === 1) {}
  2 | else if (foo === 2) {
  3 | 	bar();
  4 | }
  5 |
  6 | else if (foo === 3) {}

`;

exports[`prefer-else-if > invalid(27): if (foo === 1) {\n\tbar();\n}\nelse if (foo === 2) {}\n\nif (foo === 3) {} 1`] = `

  1 | if (foo === 1) {
  2 | 	bar();
  3 | }
  4 | else if (foo === 2) {}
  5 |
  6 | if (foo === 3) {}

`;

exports[`prefer-else-if > invalid(27): if (foo === 1) {\n\tbar();\n}\nelse if (foo === 2) {}\n\nif (foo === 3) {} 2`] = `

Message:
  1 | if (foo === 1) {
  2 | 	bar();
  3 | }
  4 | else if (foo === 2) {}
  5 |
> 6 | if (foo === 3) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | if (foo === 1) {
  2 | 	bar();
  3 | }
  4 | else if (foo === 2) {}
  5 |
  6 | else if (foo === 3) {}

`;

exports[`prefer-else-if > invalid(28): if (foo === 1 || foo === 2) {}\nelse if (foo === 3) {}\n\nif (foo === 4) {}\nelse if (foo === 5 || foo === 6) {} 1`] = `

  1 | if (foo === 1 || foo === 2) {}
  2 | else if (foo === 3) {}
  3 |
  4 | if (foo === 4) {}
  5 | else if (foo === 5 || foo === 6) {}

`;

exports[`prefer-else-if > invalid(28): if (foo === 1 || foo === 2) {}\nelse if (foo === 3) {}\n\nif (foo === 4) {}\nelse if (foo === 5 || foo === 6) {} 2`] = `

Message:
  1 | if (foo === 1 || foo === 2) {}
  2 | else if (foo === 3) {}
  3 |
> 4 | if (foo === 4) {}
    | ^^^^^^^^^^^^^^^^^
> 5 | else if (foo === 5 || foo === 6) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (foo === 1 || foo === 2) {}
  2 | else if (foo === 3) {}
  3 |
  4 | else if (foo === 4) {}
  5 | else if (foo === 5 || foo === 6) {}

`;

exports[`prefer-else-if > invalid(29): function unicorn(foo: boolean) {\n\tif (foo === false) {}\n\n\tif (foo === true) {}\n\telse if (Boolean(foo)) {}\n} 1`] = `

  1 | function unicorn(foo: boolean) {
  2 | 	if (foo === false) {}
  3 |
  4 | 	if (foo === true) {}
  5 | 	else if (Boolean(foo)) {}
  6 | }

`;

exports[`prefer-else-if > invalid(29): function unicorn(foo: boolean) {\n\tif (foo === false) {}\n\n\tif (foo === true) {}\n\telse if (Boolean(foo)) {}\n} 2`] = `

Message:
  1 | function unicorn(foo: boolean) {
  2 | 	if (foo === false) {}
  3 |
> 4 | 	if (foo === true) {}
    | 	^^^^^^^^^^^^^^^^^^^^
> 5 | 	else if (Boolean(foo)) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  6 | }

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | function unicorn(foo: boolean) {
  2 | 	if (foo === false) {}
  3 |
  4 | 	else if (foo === true) {}
  5 | 	else if (Boolean(foo)) {}
  6 | }

`;

exports[`prefer-else-if > invalid(3): if (this === null) {}\nif (this === undefined) {} 1`] = `

  1 | if (this === null) {}
  2 | if (this === undefined) {}

`;

exports[`prefer-else-if > invalid(3): if (this === null) {}\nif (this === undefined) {} 2`] = `

Message:
  1 | if (this === null) {}
> 2 | if (this === undefined) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | if (this === null) {}
  2 | else if (this === undefined) {}

`;

exports[`prefer-else-if > invalid(30): function handleSignal(process, signal) {\n\tif (signal === 'SIGINT') {\n\t\tprocess.exit(130);\n\t}\n\n\tif (signal === 'SIGTERM' || signal === 'SIGHUP') {\n\t\tprocess.exit(1);\n\t}\n} 1`] = `

  1 | function handleSignal(process, signal) {
  2 | 	if (signal === 'SIGINT') {
  3 | 		process.exit(130);
  4 | 	}
  5 |
  6 | 	if (signal === 'SIGTERM' || signal === 'SIGHUP') {
  7 | 		process.exit(1);
  8 | 	}
  9 | }

`;

exports[`prefer-else-if > invalid(30): function handleSignal(process, signal) {\n\tif (signal === 'SIGINT') {\n\t\tprocess.exit(130);\n\t}\n\n\tif (signal === 'SIGTERM' || signal === 'SIGHUP') {\n\t\tprocess.exit(1);\n\t}\n} 2`] = `

Message:
  1 | function handleSignal(process, signal) {
  2 | 	if (signal === 'SIGINT') {
  3 | 		process.exit(130);
  4 | 	}
  5 |
> 6 | 	if (signal === 'SIGTERM' || signal === 'SIGHUP') {
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 7 | 		process.exit(1);
    | ^^^^^^^^^^^^^^^^^^
> 8 | 	}
    | ^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  9 | }

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | function handleSignal(process, signal) {
  2 | 	if (signal === 'SIGINT') {
  3 | 		process.exit(130);
  4 | 	}
  5 |
  6 | 	else if (signal === 'SIGTERM' || signal === 'SIGHUP') {
  7 | 		process.exit(1);
  8 | 	}
  9 | }

`;

exports[`prefer-else-if > invalid(31): import process from 'node:process';\n\nif (signal === 'SIGINT') {\n\tprocess.exit(130);\n}\n\nif (signal === 'SIGTERM' || signal === 'SIGHUP') {\n\tprocess.exit(1);\n} 1`] = `

  1 | import process from 'node:process';
  2 |
  3 | if (signal === 'SIGINT') {
  4 | 	process.exit(130);
  5 | }
  6 |
  7 | if (signal === 'SIGTERM' || signal === 'SIGHUP') {
  8 | 	process.exit(1);
  9 | }

`;

exports[`prefer-else-if > invalid(31): import process from 'node:process';\n\nif (signal === 'SIGINT') {\n\tprocess.exit(130);\n}\n\nif (signal === 'SIGTERM' || signal === 'SIGHUP') {\n\tprocess.exit(1);\n} 2`] = `

Message:
  1 | import process from 'node:process';
  2 |
  3 | if (signal === 'SIGINT') {
  4 | 	process.exit(130);
  5 | }
  6 |
> 7 | if (signal === 'SIGTERM' || signal === 'SIGHUP') {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 8 | 	process.exit(1);
    | ^^^^^^^^^^^^^^^^^
> 9 | }
    | ^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | import process from 'node:process';
  2 |
  3 | if (signal === 'SIGINT') {
  4 | 	process.exit(130);
  5 | }
  6 |
  7 | else if (signal === 'SIGTERM' || signal === 'SIGHUP') {
  8 | 	process.exit(1);
  9 | }

`;

exports[`prefer-else-if > invalid(32): if (foo === 1) {\n\tbar = 1;\n\tbar++;\n\tdelete bar.baz;\n\tvar qux = 1;\n\tfor (bar of values) {}\n\t[bar = 1, ...bar] = values;\n\t({bar} = values);\n\tcallback(() => {\n\t\tfoo = 2;\n\t});\n\tvalues = [, bar];\n}\nif (foo === 2) {} 1`] = `

   1 | if (foo === 1) {
   2 | 	bar = 1;
   3 | 	bar++;
   4 | 	delete bar.baz;
   5 | 	var qux = 1;
   6 | 	for (bar of values) {}
   7 | 	[bar = 1, ...bar] = values;
   8 | 	({bar} = values);
   9 | 	callback(() => {
  10 | 		foo = 2;
  11 | 	});
  12 | 	values = [, bar];
  13 | }
  14 | if (foo === 2) {}

`;

exports[`prefer-else-if > invalid(32): if (foo === 1) {\n\tbar = 1;\n\tbar++;\n\tdelete bar.baz;\n\tvar qux = 1;\n\tfor (bar of values) {}\n\t[bar = 1, ...bar] = values;\n\t({bar} = values);\n\tcallback(() => {\n\t\tfoo = 2;\n\t});\n\tvalues = [, bar];\n}\nif (foo === 2) {} 2`] = `

Message:
   1 | if (foo === 1) {
   2 | 	bar = 1;
   3 | 	bar++;
   4 | 	delete bar.baz;
   5 | 	var qux = 1;
   6 | 	for (bar of values) {}
   7 | 	[bar = 1, ...bar] = values;
   8 | 	({bar} = values);
   9 | 	callback(() => {
  10 | 		foo = 2;
  11 | 	});
  12 | 	values = [, bar];
  13 | }
> 14 | if (foo === 2) {}
     | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
   1 | if (foo === 1) {
   2 | 	bar = 1;
   3 | 	bar++;
   4 | 	delete bar.baz;
   5 | 	var qux = 1;
   6 | 	for (bar of values) {}
   7 | 	[bar = 1, ...bar] = values;
   8 | 	({bar} = values);
   9 | 	callback(() => {
  10 | 		foo = 2;
  11 | 	});
  12 | 	values = [, bar];
  13 | }
  14 | else if (foo === 2) {}

`;

exports[`prefer-else-if > invalid(33): if (foo === 1n) {}\nif (foo === 2n) {} 1`] = `

  1 | if (foo === 1n) {}
  2 | if (foo === 2n) {}

`;

exports[`prefer-else-if > invalid(33): if (foo === 1n) {}\nif (foo === 2n) {} 2`] = `

Message:
  1 | if (foo === 1n) {}
> 2 | if (foo === 2n) {}
    | ^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (foo === 1n) {}
  2 | else if (foo === 2n) {}

`;

exports[`prefer-else-if > invalid(4): if (a.b.c === 1) {}\nif (a.b.c === 2) {} 1`] = `

  1 | if (a.b.c === 1) {}
  2 | if (a.b.c === 2) {}

`;

exports[`prefer-else-if > invalid(4): if (a.b.c === 1) {}\nif (a.b.c === 2) {} 2`] = `

Message:
  1 | if (a.b.c === 1) {}
> 2 | if (a.b.c === 2) {}
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | if (a.b.c === 1) {}
  2 | else if (a.b.c === 2) {}

`;

exports[`prefer-else-if > invalid(5): switch (x) {\n\tcase 'a':\n\t\tif (foo === 1) {}\n\t\tif (foo === 2) {}\n\t\tif (foo === 3) {}\n} 1`] = `

  1 | switch (x) {
  2 | 	case 'a':
  3 | 		if (foo === 1) {}
  4 | 		if (foo === 2) {}
  5 | 		if (foo === 3) {}
  6 | }

`;

exports[`prefer-else-if > invalid(5): switch (x) {\n\tcase 'a':\n\t\tif (foo === 1) {}\n\t\tif (foo === 2) {}\n\t\tif (foo === 3) {}\n} 2`] = `

Message:
  1 | switch (x) {
  2 | 	case 'a':
  3 | 		if (foo === 1) {}
> 4 | 		if (foo === 2) {}
    | 		^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  5 | 		if (foo === 3) {}
  6 | }

Output:
  1 | switch (x) {
  2 | 	case 'a':
  3 | 		if (foo === 1) {}
  4 | 		else if (foo === 2) {}
  5 | 		if (foo === 3) {}
  6 | }

`;

exports[`prefer-else-if > invalid(5): switch (x) {\n\tcase 'a':\n\t\tif (foo === 1) {}\n\t\tif (foo === 2) {}\n\t\tif (foo === 3) {}\n} 3`] = `

Message:
  1 | switch (x) {
  2 | 	case 'a':
  3 | 		if (foo === 1) {}
  4 | 		if (foo === 2) {}
> 5 | 		if (foo === 3) {}
    | 		^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  6 | }

Output:
  1 | switch (x) {
  2 | 	case 'a':
  3 | 		if (foo === 1) {}
  4 | 		if (foo === 2) {}
  5 | 		else if (foo === 3) {}
  6 | }

`;

exports[`prefer-else-if > invalid(6): if (foo === 1) {\n\tbar();\n}\n\nif (foo === 2) {} 1`] = `

  1 | if (foo === 1) {
  2 | 	bar();
  3 | }
  4 |
  5 | if (foo === 2) {}

`;

exports[`prefer-else-if > invalid(6): if (foo === 1) {\n\tbar();\n}\n\nif (foo === 2) {} 2`] = `

Message:
  1 | if (foo === 1) {
  2 | 	bar();
  3 | }
  4 |
> 5 | if (foo === 2) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | if (foo === 1) {
  2 | 	bar();
  3 | }
  4 |
  5 | else if (foo === 2) {}

`;

exports[`prefer-else-if > invalid(7): if (foo === 1) {}\nif (foo === 2) {}\nif (foo === 3) {} 1`] = `

  1 | if (foo === 1) {}
  2 | if (foo === 2) {}
  3 | if (foo === 3) {}

`;

exports[`prefer-else-if > invalid(7): if (foo === 1) {}\nif (foo === 2) {}\nif (foo === 3) {} 2`] = `

Message:
  1 | if (foo === 1) {}
> 2 | if (foo === 2) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.
  3 | if (foo === 3) {}

Output:
  1 | if (foo === 1) {}
  2 | else if (foo === 2) {}
  3 | if (foo === 3) {}

`;

exports[`prefer-else-if > invalid(7): if (foo === 1) {}\nif (foo === 2) {}\nif (foo === 3) {} 3`] = `

Message:
  1 | if (foo === 1) {}
  2 | if (foo === 2) {}
> 3 | if (foo === 3) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (foo === 1) {}
  2 | if (foo === 2) {}
  3 | else if (foo === 3) {}

`;

exports[`prefer-else-if > invalid(8): if (1 === foo) {}\nif (2 === foo) {} 1`] = `

  1 | if (1 === foo) {}
  2 | if (2 === foo) {}

`;

exports[`prefer-else-if > invalid(8): if (1 === foo) {}\nif (2 === foo) {} 2`] = `

Message:
  1 | if (1 === foo) {}
> 2 | if (2 === foo) {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Output:
  1 | if (1 === foo) {}
  2 | else if (2 === foo) {}

`;

exports[`prefer-else-if > invalid(9): if (foo.bar === 1) {}\nif (foo.bar === 2) {} 1`] = `

  1 | if (foo.bar === 1) {}
  2 | if (foo.bar === 2) {}

`;

exports[`prefer-else-if > invalid(9): if (foo.bar === 1) {}\nif (foo.bar === 2) {} 2`] = `

Message:
  1 | if (foo.bar === 1) {}
> 2 | if (foo.bar === 2) {}
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`else if\` over an adjacent \`if\` with a related condition.

Suggestion 1/1: Insert \`else\` before this \`if\`.:
  1 | if (foo.bar === 1) {}
  2 | else if (foo.bar === 2) {}

`;
